--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.19.1",
     "@vercel/postgres": "^0.10.0",
     "next": "14.2.11",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -21,6 +24,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
     "postcss": "^8",
+    "prisma": "^5.19.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
