GitHubのOAuth設定、アイコンをユーザに合わせて表示

--- a/.env
+++ b/.env
@@ -1,7 +1,13 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+POSTGRES_URL="postgres://default:vIekYyW1stE8@ep-tight-lab-a4ig3vic-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:vIekYyW1stE8@ep-tight-lab-a4ig3vic-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:vIekYyW1stE8@ep-tight-lab-a4ig3vic-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:vIekYyW1stE8@ep-tight-lab-a4ig3vic.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-tight-lab-a4ig3vic-pooler.us-east-1.aws.neon.tech"
+POSTGRES_PASSWORD="vIekYyW1stE8"
+POSTGRES_DATABASE="verceldb"
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+NEXTAUTH_SECRET="7kRwzRNOjxtg02Zo8kSdpzVWl6edTVWO21Y+OKAL9y0="
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+GITHUB_ID="Ov23liAtHa8pXCOM5SaB"
+GITHUB_SECRET="d0e8fb478f11bdf2069fe301441eaad77b9f8890"
