microCMSから商品情報を取得・一覧表示、ログインログアウト時の画面遷移などを追加

--- a/.env
+++ b/.env
@@ -11,3 +11,6 @@ NEXTAUTH_SECRET="7kRwzRNOjxtg02Zo8kSdpzVWl6edTVWO21Y+OKAL9y0="
 
 GITHUB_ID="Ov23liAtHa8pXCOM5SaB"
 GITHUB_SECRET="d0e8fb478f11bdf2069fe301441eaad77b9f8890"
+
+NEXT_PUBLIC_SERVICE_DOMAIN="keibayosocommerce"
+NEXT_PUBLIC_API_KEY="Oau2FnyNViAGCiEchhaDlPpfSQ5iPYNjBseo"
