--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.19.1",
     "@vercel/postgres": "^0.10.0",
+    "microcms-js-sdk": "^3.1.2",
     "next": "14.2.11",
     "next-auth": "^4.24.7",
     "react": "^18",
