サインイン、サインアウトを修正・ローディングの追加

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-spinners": "^0.14.1",
     "stripe": "^16.11.0"
   },
   "devDependencies": {
